# verify-archive

./: .editorconfig  .envrc  .gitignore  Cargo.toml  Directory.Build.props  Gemfile  LICENSE.md  README.md  VerifyArchive.sln  default.nix  flake.nix  shell.nix  src-deps.json  update-depends.sh  verify-archive.rb
src/: digest.rs  fs.rs  main.rs  opts.rs  zip.rs
src/VerifyArchive/: Archive.fs  Blake3.fs  Cli.fs  Commands.fs  Comparison.fs  Error.fs  FileSystem.fs  Program.fs  Stream.fs  StreamComparison.fs  VerifyArchive.fsproj  packages.lock.json
src/commands/: mod.rs  verify.rs
tests/VerifyArchive.Tests/: Archive.fs  Blake3.fs  FileSystem.fs  Program.fs  Stream.fs  StreamComparison.fs  Utility.fs  VerifyArchive.Tests.fsproj  packages.lock.json
