[package]
name = "verify-archive"
version = "0.1.0"
edition = "2018"

repository = "https://github.com/reckenrode/verify-archive"
categories = ["command-line-utilities"]
keywords = ["backups"]
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "Compare Backblaze backup archives to the local filesystem for discrepancies"

[dependencies]
async-std = { version = "1.9", features = [ "default", "attributes" ] }
async-stream = "0.3"
blake3 = { version = "1", features = [ "default", "rayon" ] }
clap = "3.0.0-beta.2"
futures-core = "0.3"
futures-util = "0.3"
itertools = "0.10"
zip = "0.5"

[dev-dependencies]
tempfile = "3.2"
