[package]
name = "verify-archive"
version = "0.5.0"
edition = "2021"
rust-version = "1.56"

repository = "https://github.com/reckenrode/verify-archive"
categories = ["command-line-utilities"]
keywords = ["backups"]
license = "GPL-3.0-only"
readme = "README.md"

authors = ["Randy Eckenrode <randy@largeandhighquality.com>"]
description = "Compare Backblaze backup archives to the local filesystem for discrepancies"

[dependencies]
blake3 = "1.0"
clap = { version = "3.0", features = ["derive"] }
itertools = "0.10"
rayon = "1.5"
zip = "0.5"

[dev-dependencies]
tempfile = "3.2"

[profile.release]
incremental = false
debug = 0 # Set this to 1 or 2 to get more useful backtraces in debugger.
lto = true
codegen-units = 1
